--- a/Round 1/Analysis_Selected.ipynb
+++ b/Round 1/Analysis_Selected.ipynb
@@ -30,35 +30,16 @@
       "cell_type": "code",
       "source": [
         "# Step 1: Download the file from the new Dropbox URL\n",
-        "#!wget \"https://www.dropbox.com/scl/fi/mam4v02g9fdg4igmbag1c/router_data.zip?rlkey=dhvdrik7wqfhyqeuzlslb5zns&st=u40ntej2&dl=0\" -O router_data.zip\n",
+        "!wget \"https://www.dropbox.com/scl/fi/mam4v02g9fdg4igmbag1c/router_data.zip?rlkey=dhvdrik7wqfhyqeuzlslb5zns&st=u40ntej2&dl=0\" -O router_data.zip\n",
         "\n",
         "# Step 2: Unzip the downloaded file\n",
-        "#!unzip router_data.zip\n"
+        "!unzip router_data.zip\n"
       ],
       "metadata": {
         "id": "pT64EkzFTKvs"
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Step 2: Unzip the downloaded file\n",
-        "#!unzip router_data.zip"
-      ],
-      "metadata": {
-        "id": "6CJxnXjha5md"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "hfNb2UFWav7p"
-      }
     },
     {
       "cell_type": "code",
